# vidly

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
.config/: nextest.toml
.github/workflows/: ci.yaml
cloud/: README.md  backend.tf  main.tf  outputs.tf  providers.tf  terraform.auto.tfvars  variables.tf
docs/adr/: 01-deploy-to-where.md  02-how-to-deploy.md  03-add-reverse-proxy.md  04-use-templates-for-viewmodel.md  05-object-store.md
docs/tips/: media-container-metadata.md
migrations/2024-07-09-000001_create_movies/: down.sql  up.sql
migrations/2024-07-11-000002_remove_subtitle_from_movies/: down.sql  up.sql
migrations/2024-07-11-000003_create_tags/: down.sql  up.sql
migrations/2026-07-11-000004_create_movie_tags/: down.sql  up.sql
src/: config.rs  lib.rs  main.rs  movie.rs  object_store.rs  tag.rs
src/database/: mod.rs  schema.rs
src/database/model/: mod.rs  movie.rs  tag.rs
src/web/: mod.rs
templates/: categories.html  category.html  index.html  upload.html  watch.html
templates/admin/: index.html
templates/movie/: upload.html  watch.html
tests/: movie.rs
