[package]
name = "vidly"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
askama = "0.16.0"
axum = "0.8.9"
bytes = "1.12.0"
directories = "6.0.0"
futures-util = "0.3"
hex = "0.4"
object_store = "0.14.0"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52.3", features = ["full"] }
async-trait = "0.1.89"
